# giant-revB

./: COPYING  README.md
fpga/vhdl/: adc_controller.vhd  adc_controller_new.vhd  ask_modulator.vhd  clock_divider.vhd  dac_controller.vhd  downsampling_controller.vhd  gpio_switch.vhd  input_mux.vhd  io_controller.vhd  main-v1.ucf  main.ucf  main.vhd  memory_interface.vhd  miller_encoder.vhd  parallel_to_u8.vhd  pattern_detector.vhd  pic_programmer.vhd  pipelined_adder_128.vhd  sc_controller.vhd  sc_rx.vhd  sc_tx.vhd  shift_register.vhd  shift_register_u8.vhd  timing_controller_waveform.vhd  trigger_generator.vhd  u8_to_parallel.vhd  universal_rx_core.vhd  universal_rx_core_tb.vhd  universal_trigger_core.vhd  universal_trigger_core_tb.vhd  universal_tx_core.vhd  universal_tx_core_tb.vhd
fpga/vhdl/ise/: giant.xise  main.bit
fpga/vhdl/ise/ipcore_dir/: bigmem.gise  bigmem.ncf  bigmem.veo  bigmem.vho  bigmem.xco  clock_domain_sync.xco  clock_generator.xco  (+27 more)
hardware/: BOM.txt  XC6206.lbr  board.brd  board.sch  ths3062.lbr  xppower-IAS01.lbr
python/: README.md  dac.py  example_lpc1343.py  example_nrf52832.py  example_pico_crowbar.py  example_stm32f100_faultfinder_sha256.py  fpga.py  glitcher.py  gpio.py  requirements.txt  spartan6_fpga.py  test_glitcher.py  timing_controller.py  uart.py  urx.py  utrigger.py  utx.py
python/fpga/: 99-ztex.rules  dl_firm_series2_stable.sh  dl_firm_series_current.sh  main_series2.bit  uc_series1.ihx
targets/pi_pico/: CMakeLists.txt  main.c
uc/: Makefile  common.h  ddr.c  fpga.c  io.c  uc.c
uc/ztex-sdk-181105/ztex/: COPYING  Makefile.mk
(+325 files in other folders)
